--- a/style.css
+++ b/style.css
@@ -58,7 +58,10 @@ color:black !important;
 {
   margin-left: 15px;
 }
-
+.set_top
+{
+top: -10px;
+}
 header { background:white ; width:100%; height: 100px; }
 section { background-image: url('slider1.png'); width:100%; height: 350px;  }
 menu { background: orange; width:100%; height: 50px; }
@@ -105,4 +108,24 @@ p { font: 14px Arial, sans-serif; color: black; text-align: center; }
     margin-left: 10px;
   }
   
-  
+  .searchbar
+  {
+    margin-left: 28px;
+  }
+
+  .search
+  {
+    background-color: brown;
+    display: none;
+    margin-bottom: 10px;
+  }
+  .wyszukiwarka
+  {
+    background-color: brown;
+    border: 1px solid brown;
+  }
+
+  .wyszukiwarka::placeholder
+  {
+    color: white;
+  }
