--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ top: -10px;
 }
 header { background:white ; width:100%; height: 100px; }
 section { background-image: url('slider1.png'); width:100%; height: 350px;  }
-menu { background: orange; width:100%; height: 50px; }
+menu { background: orange; width:100%; height: 50px; margin-bottom: -10px;}
 footer { background: white; width:100%; height: 190px; clear: both; }
 p { font: 14px Arial, sans-serif; color: black; text-align: center; }
 
@@ -118,6 +118,8 @@ p { font: 14px Arial, sans-serif; color: black; text-align: center; }
     background-color: brown;
     display: none;
     margin-bottom: 10px;
+    width: 100%;
+    justify-content: space-around;
   }
   .wyszukiwarka
   {
