--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ top: -10px;
 }
 header { background:white ; width:100%; height: 100px; }
 section { background-image: url('slider1.png'); width:100%; height: 350px;  }
-menu { background: orange; width:100%; height: 50px; margin-bottom: -10px;}
+menu { background: orange; width:100%; height: 50px;}
 footer { background: white; width:100%; height: 190px; clear: both; }
 p { font: 14px Arial, sans-serif; color: black; text-align: center; }
 
@@ -126,8 +126,95 @@ p { font: 14px Arial, sans-serif; color: black; text-align: center; }
     background-color: brown;
     border: 1px solid brown;
   }
+  .wyszukiwarka:focus-visible
+  {
+    outline: none;
+  }
 
   .wyszukiwarka::placeholder
   {
     color: white;
   }
+  ul
+  {
+    margin-bottom: 0 !important;
+
+  }
+.naglowek
+{
+  text-align: center;
+  color:blue;
+  font-size: 20px;
+  font-family: fantasy;
+  margin-top: 30px;
+  letter-spacing: 3px;
+
+}
+
+.footer_row
+{
+  display: flex;
+  justify-content: center;
+}
+
+.footer_item
+{
+  margin: 20px;
+  text-align: center;
+}
+.h3_spec
+{  
+  position: relative;
+  margin-top: 10px;
+}
+.h3_spec::after 
+{
+  content: url("images/sspecifier.png");
+  position: absolute;
+  right: -20px;
+}
+
+.h3_build
+{  
+  position: relative;
+  margin-top: 10px;
+}
+
+.h3_build::after 
+{
+  content: url("images/sbuilder.png");
+  position: absolute;
+  right: -20px;
+}
+
+.h3_spec::after 
+{
+  content: url("images/sspecifier.png");
+  position: absolute;
+  right: -20px;
+}
+
+.h3_precast::after 
+{
+  content: url("images/arrow.png");
+  position: absolute;
+  right: -20px;
+}
+
+.h3_precast
+{  
+  position: relative;
+  margin-top: 10px;
+}
+
+.foto_slider
+{
+  position: relative;
+
+}
+
+.slider_content
+{
+  position: absolute;
+  z-index: 10;
+}
