--- a/style.css
+++ b/style.css
@@ -218,3 +218,9 @@ p { font: 14px Arial, sans-serif; color: black; text-align: center; }
   position: absolute;
   z-index: 10;
 }
+
+.slider1
+{
+  background-image: url("images/slider1.png");
+  height: 300px;
+}
