--- a/style.css
+++ b/style.css
@@ -112,7 +112,8 @@ h3 {
 
 a {
   text-decoration: none;
-  color: black !important;
+  color: white !important;
+  font-size: 13px;
 }
 .menu-item-right {
   margin-left: 15px;
@@ -213,7 +214,7 @@ ul {
 }
 .naglowek {
   text-align: center;
-  color: blue;
+  color: #51758c;
   font-size: 20px;
   font-family: fantasy;
   margin-top: 30px;
@@ -279,12 +280,41 @@ ul {
 .slider1 {
   background-image: url("images/slider1.png");
   height: 300px;
+  padding-left: 20%;
+  padding-top: 20px;
 }
 .slider2 {
   background-image: url("images/slider2.png");
   height: 300px;
+  padding-left: 20%;
+  padding-top: 20px;
 }
 .slider3 {
   background-image: url("images/slider3.png");
   height: 300px;
+  padding-left: 20%;
+  padding-top: 20px;
+}
+.slider_text
+{
+  width: 450px;
+  background-color: white;
+  opacity: 0.2;
+  padding: 10px;
+}
+.slider_button
+{
+  background-color: #35b38e;
+  color:white;
+  border:none;
+  padding: 10px;
+  margin-top: 20px;
+  text-transform: uppercase;
+  font-size: 15px;
+  width: 170px;
+}
+
+.slider_h3
+{
+  color: white;
 }
